cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_08779_al_tmc_auto-claim.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: >-
  Alert Logic Threat Manager (Network IDS + Web App IDS) deployment with auto-claim feature enabled. Creates EC2 Instance, Security Groups and Elastic IP when deployed in a public subnet. The appliance will use reverse ssh access from our DC.
Parameters:
  vpcID:
    Type: 'AWS::EC2::VPC::Id'
    Description: VPC into which Threat Manager will be deployed.
  monitoringCIDR:
    Type: String
    Default: 10.0.0.0/16
    Description: VPC CIDR netblock to be monitored. (Where agents will be deployed)
  subnetId:
    Type: 'AWS::EC2::Subnet::Id'
    Description: ID of a private or public subnet into which Threat Manager will be deployed. Must be public if you choose to enable Web App IDS.
  instanceType:
    Type: String
    Description: EC2 Instance Type Threat Manager will be spun up as.
    Default: c5.xlarge
    AllowedValues:
      - c4.large
      - c4.xlarge
      - c4.2xlarge
      - c5.large
      - c5.xlarge
      - c5.2xlarge
  subnetType:
    Type: String
    Description: Select if the subnet is a public or private subnet. Must be public if you choose to enable Web App IDS.
    Default: Private
    AllowedValues:
      - Public
      - Private
  enableWebAppIDS:
    Type: String
    Description: Adds the required SG rules for Web App IDS.
    Default: false
    AllowedValues:
      - true
      - false
Conditions:
  AttachEIP: !Equals
    - Public
    - !Ref subnetType
  AddWebAppIDSRules: !Equals
    - true
    - !Ref enableWebAppIDS
Mappings:
  threatManagerAMI:
    ap-south-1:
      AMI: ami-944916fb
    eu-west-3:
      AMI: ami-2d66d050
    eu-west-2:
      AMI: ami-c66480a1
    eu-west-1:
      AMI: ami-c57336bc
    ap-northeast-2:
      AMI: ami-e768c589
    ap-northeast-1:
      AMI: ami-f07e3896
    sa-east-1:
      AMI: ami-72115a1e
    ca-central-1:
      AMI: ami-6d880f09
    ap-southeast-1:
      AMI: ami-1c1e5560
    ap-southeast-2:
      AMI: ami-3edd1b5c
    eu-central-1:
      AMI: ami-aa92ffc5
    us-east-1:
      AMI: ami-5934df24
    us-east-2:
      AMI: ami-e5fdca80
    us-west-1:
      AMI: ami-87e6ede7
    us-west-2:
      AMI: ami-5b9e1623
    us-gov-west-1:
      AMI: ami-89df5ce8
Resources:
  sgThreatManager:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Alert Logic Threat Manager Security Group
      VpcId: !Ref vpcID
      SecurityGroupIngress:
        - IpProtocol: tcp
          CidrIp: !Ref monitoringCIDR
          FromPort: '7777'
          ToPort: '7777'
        - IpProtocol: tcp
          CidrIp: !Ref monitoringCIDR
          FromPort: '443'
          ToPort: '443'
      SecurityGroupEgress:
        - IpProtocol: tcp
          CidrIp: 204.110.218.96/27
          FromPort: '443'
          ToPort: '443'
        - IpProtocol: tcp
          CidrIp: 204.110.219.96/27
          FromPort: '443'
          ToPort: '443'
        - IpProtocol: tcp
          CidrIp: 208.71.209.32/27
          FromPort: '443'
          ToPort: '443'
        - IpProtocol: tcp
          CidrIp: 185.54.124.0/24
          FromPort: '443'
          ToPort: '443'
        - IpProtocol: tcp
          CidrIp: 204.110.218.96/27
          FromPort: '4138'
          ToPort: '4138'
        - IpProtocol: tcp
          CidrIp: 204.110.219.96/27
          FromPort: '4138'
          ToPort: '4138'
        - IpProtocol: tcp
          CidrIp: 208.71.209.32/27
          FromPort: '4138'
          ToPort: '4138'
        - IpProtocol: tcp
          CidrIp: 185.54.124.0/24
          FromPort: '4138'
          ToPort: '4138'
        - IpProtocol: udp
          CidrIp: 8.8.8.8/32
          FromPort: '53'
          ToPort: '53'
        - IpProtocol: udp
          CidrIp: 8.8.4.4/32
          FromPort: '53'
          ToPort: '53'
        - IpProtocol: tcp
          CidrIp: 8.8.8.8/32
          FromPort: '53'
          ToPort: '53'
        - IpProtocol: tcp
          CidrIp: 8.8.4.4/32
          FromPort: '53'
          ToPort: '53'
      Tags:
        - Key: Name
          Value: Alert Logic Threat Manager Security Group
  sgWebAppIDS:
    Type: 'AWS::EC2::SecurityGroup'
    Condition: AddWebAppIDSRules
    Properties:
      GroupDescription: Alert Logic Web App IDS Security Group
      VpcId: !Ref vpcID
      SecurityGroupIngress:
        - IpProtocol: tcp
          CidrIp: 204.110.218.96/27
          FromPort: '4849'
          ToPort: '4849'
        - IpProtocol: tcp
          CidrIp: 204.110.219.96/27
          FromPort: '4849'
          ToPort: '4849'
        - IpProtocol: tcp
          CidrIp: 208.71.209.32/27
          FromPort: '4849'
          ToPort: '4849'
        - IpProtocol: tcp
          CidrIp: 185.54.124.0/24
          FromPort: '4849'
          ToPort: '4849'
      Tags:
        - Key: Name
          Value: Alert Logic Web App IDS Security Group
  instanceTmAppliance:
    Type: 'AWS::EC2::Instance'
    Properties:
      ImageId: !FindInMap
        - threatManagerAMI
        - !Ref 'AWS::Region'
        - AMI
      InstanceType: !Ref instanceType
      SubnetId: !Ref subnetId
      SecurityGroupIds:
        !If
          - AddWebAppIDSRules
          - - !Ref sgWebAppIDS
            - !Ref sgThreatManager
          - - !Ref sgThreatManager
      Tags:
        - Key: Name
          Value: Alert Logic Threat Manager
      BlockDeviceMappings:
        - DeviceName: '/dev/sda1'
          Ebs:
            VolumeType: 'gp2'
            VolumeSize: 100
            DeleteOnTermination: true
    DependsOn: sgThreatManager
  tmcEIP:
    Type: 'AWS::EC2::EIP'
    Condition: AttachEIP
    Properties:
      InstanceId: !Ref instanceTmAppliance
      Domain: vpc
    DependsOn: instanceTmAppliance
Outputs:
  agentSecurityGroupID:
    Value: !Ref sgThreatManager
    Description: >-
      Add this Security Group ID into the destination fields of the egress
      rules for the Agents' Security Groups.
  appliancePublicIP:
    Value: !Ref tmcEIP
    Description: >-
      Monitor appliance claim status from http://[appliancePublicIP].
    Condition: AttachEIP
